Using php 5.6 and a different mysql galaxy package. Tweaking silverstripe files trying to use the right file

--- a/ansible/roles/silverstripe/templates/_ss_environment.php.j2
+++ b/ansible/roles/silverstripe/templates/_ss_environment.php.j2
@@ -6,7 +6,7 @@ define('SS_ENVIRONMENT_TYPE', '{{ ss_env_type }}');
 define('SS_DATABASE_SERVER', 'localhost');
 define('SS_DATABASE_NAME', '{{ mrwf_mysql_database }}');
 define('SS_DATABASE_USERNAME', '{{ mrwf_mysql_user }}');
-define('SS_DATABASE_PASSWORD', '{{ mysql_passwd }}');
+define('SS_DATABASE_PASSWORD', '{{ mrwf_mysql_password }}');
 
 /* Configure a default username and password to access the CMS on all sites in this environment. */
 define('SS_DEFAULT_ADMIN_USERNAME', '{{ ss_account_name }}');
